- fixed assertion in tree.c w.r.t. node estimation
- fixed bug in presolving of cons_logicor.c: adding variable implications can lead to further reductions; added call to applyFixings()
- fixed bug in cons_linear.c while sorting the eventdatas during the binary variable sorting for propagation

plugins:
- added vbound heuristic (heur_vbounds.{c,h})
- added clique heuristic (heur_clique.{c,h})
- added pseudoboolean constraint handler (cons_pseudoboolean.{c,h})
 
parameters:
- added parameter <constraints/quadratic/disaggregate> to split a block-separable quadratic constraint into several quadratic constraint
- added parameter <constraints/indicator/removeIndicators> to remove indicator constraints if corresponding vub has been added
- change default value of parameter "nodeselection/restartdfs/selectbestfreq" 100
- added parameter "nodeselection/restartdfs/countonlyleafs" in node selector restart dfs which can be used to select 
  the counting process of processed nodes 
- added parameter <misc/resetstat> which state if the statistics should be reseted if the transformed problem is freed 
  (in case of a benders decomposition this parameter should be set to FALSE) default value is TRUE
- added parameter <misc/improvingsols> which states whether only solutions which have a better (or equal) primal bound 
  as the best known are checked; this is of interest if the check of a solution is expensive; default value is FALSE
- added parameters <constraints/linear/nmincomparisons> and <constraints/linear/mingainpernmincomparisons> to influence stopping criterium
  for pairwise comparison of linear constraints
- added parameter <constraints/indicator/maxConditionAltLP> to enable a quality check for the solution of the alternative LP 
- moved parameters for pseudoboolean constraints from opb-reader to pseudoboolean constraint handler