@@ -34,6 +34,7 @@ fixed bugs:
 - fixed assertion in tree.c w.r.t. node estimation
 - fixed bug in presolving of cons_logicor.c: adding variable implications can lead to further reductions; added call to applyFixings()
 - fixed bug in cons_linear.c while sorting the eventdatas during the binary variable sorting for propagation
+- fixed bug in heur_subnlp.c where constraints forbidding variable fixations where added if a cutoff was used in the subproblem
 
 plugins:
 - added vbound heuristic (heur_vbounds.{c,h})
